<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
			android:id="@+id/homeMainFragment"
			android:title="@string/bottom_nav_home_title"
			android:enabled="true"
			android:icon="@drawable/bottom_navigation_home_icon" />

	<item
			android:id="@+id/searchMainFragment"
			android:title="@string/bottom_nav_search_title"
			android:enabled="true"
			android:icon="@drawable/bottom_navigation_search_icon" />

	<item
			android:id="@+id/favoritesMainFragment"
			android:title="@string/bottom_nav_favorites_title"
			android:enabled="true"
			android:icon="@drawable/bottom_navigation_favorites_icon" />

	<item
			android:id="@+id/burgerMenuFragment"
			android:title="@string/bottom_nav_burger_menu_title"
			android:enabled="true"
			android:icon="@drawable/bottom_navigation_burger_menu_icon" />
</menu>
